--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,3 +12,16 @@
             {{ macro.displayNewsSources(technology)}}
         </ul>
     </div>
+
+    <div class="col-md-4 ">
+        <div class="right_coloum floatright">
+            <div class="single_right_coloum">
+                <h2 class="title">Top headlines</h2>
+                <ul>
+                    {%for item in headlines %}
+                    <div class="single_cat_right_content">
+                        <h3>{{item.title}}</h3>
+                        <p>{{item.description|truncate(100)}}</p>
+                        <p class="single_cat_right_content_meta"><a href="#"><span>read more</span></a> 3 hours ago</p>
+                        </li>
+                    </div>
