--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,3 +25,12 @@
                         <p class="single_cat_right_content_meta"><a href="#"><span>read more</span></a> 3 hours ago</p>
                         </li>
                     </div>
+                    {% endfor %}
+                    </li>
+                </ul>
+                <a class="popular_more" href="#">more</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
