--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,3 +13,17 @@
                     <li><a href="#">Subscribe</a></li>
                 </ul>
             </div>
+            <div class="social_plus_search floatright">
+                <div class="social">
+                    <ul>
+                        <li>
+                            <a href="#" class="twitter"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="facebook"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="feed"></a>
+                        </li>
+                    </ul>
+                </div>
