--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -27,3 +27,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="search">
+                    <form action="#" method="post" id="search_form">
+                        <input type="text" value="Search news" id="s" />
+                        <input type="submit" id="searchform" value="search" />
+                        <input type="hidden" value="post" name="post_type" />
+                    </form>
+                </div>
+            </div>
+        </div>
