--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -44,3 +44,11 @@
                         <li><a href="/source/{{item.id}}&35">{{item.name}}</a></li>
                         {%endfor%}
                     </ul>
+                </li>
+                <li><a href="#">sports</a>
+                    <ul>
+                        {% for item in sports %}
+                        <li><a href="/source/{{item.id}}&35">{{item.name}}</a></li>
+                        {%endfor%}
+                    </ul>
+                </li>
