--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -52,3 +52,11 @@
                         {%endfor%}
                     </ul>
                 </li>
+                <li><a href="#">technology</a>
+                    <ul>
+                        {% for item in technology %}
+                        <li><a href="/source/{{item.id}}&35">{{item.name}}</a></li>
+                        {%endfor%}
+
+                    </ul>
+                </li>
