--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -68,3 +68,10 @@
 
                     </ul>
                 </li>
+                <li><a href="#">business</a>
+                    <ul>
+                        {% for item in business %}
+                        <li><a href="/source/{{item.id}}&35">{{item.name}}</a></li>
+                        {%endfor%}
+                    </ul>
+                </li>
