--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -75,3 +75,13 @@
                         {%endfor%}
                     </ul>
                 </li>
+                <li><a href="#">entertainment</a>
+                    <ul>
+                        {% for item in entertainment %}
+                        <li><a href="/source/{{item.id}}&35">{{item.name}}</a></li>
+                        {%endfor%}
+                </li>
+                </ul>
+
+            </ul>
+        </div>
