--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,3 @@
 {% extends 'bootstrap/base.html' %} {% block styles %} {{super()}}
 
-<link href="{{url_for('static',filename='css/index.css')}}" rel="stylesheet"> {% endblock %} {% block navbar %} {% include 'nav.html' %} {% endblock %}
+<link href="{{url_for('static',filename='css/index.css')}}" rel="stylesheet"> {% endblock %} {% block navbar %} {% include 'navbar.html' %} {% endblock %}
