--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,13 +22,13 @@
                     <div class="single_cat_right_content">
                         <h3>{{item.title}}</h3>
                         <p>{{item.description|truncate(100)}}</p>
-                        <p class="single_cat_right_content_meta"><a href="#"><span>read more</span></a> 3 hours ago</p>
+                        <p class="single_cat_right_content_meta"><a href="{{Sitem.url}}"><span>read more</span></a> 3 hours ago</p>
                         </li>
                     </div>
                     {% endfor %}
                     </li>
                 </ul>
-                <a class="popular_more" href="#">more</a>
+                <a class="popular_more" href="">more</a>
             </div>
         </div>
     </div>
