--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
                     <div class="single_cat_right_content">
                         <h3>{{item.title}}</h3>
                         <p>{{item.description|truncate(100)}}</p>
-                        <p class="single_cat_right_content_meta"><a href="{{Sitem.url}}"><span>read more</span></a> 3 hours ago</p>
+                        <p class="single_cat_right_content_meta"><a href="{{item.url}}"><span>read more</span></a> 3 hours ago</p>
                         </li>
                     </div>
                     {% endfor %}
