--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
                     {% endfor %}
                     </li>
                 </ul>
-                <a class="popular_more" href="">more</a>
+                <a class="popular_more" href="">view more</a>
             </div>
         </div>
     </div>
